<resources>
    <string name="app_name">Octo by Cisnux</string>
    <string name="searchbar_hint">Search username</string>
    <string name="followers_placeholder">Followers</string>
    <string name="following_placeholder">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="not_found_title">No results found.</string>
    <string name="not_found_message">Your search returned no results.\nTry shortening or rephrasing your search.</string>
    <string name="no_followers_title">Followers</string>
    <string name="no_following_title">People you follow</string>
    <string name="no_followers_message">You\'ll see all the people who follow you here.</string>
    <string name="no_following_message">Once you follow people, you\'ll see them here.</string>
    <string name="favorite_users_message">Once you add favorite user, you\'ll see them here.</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_favorite_user">Favorite Users</string>
    <string name="summary_dark_mode">Use black theme when in dark mode</string>
    <string name="summary_light_mode">Use white theme when in light mode</string>
    <string name="title_theme">Adjust App Theme</string>
    <string name="add_to_favorite_users">add to favorite users</string>
    <string name="favorite_users_title">Favorite Users</string>
    <string name="share">Share</string>
</resources>