<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FavoriteUserFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_favorite_user"
        app:titleTextColor="?attr/colorOnBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".ui.FollowersFollowingFragment"
        tools:itemCount="20"
        tools:listitem="@layout/list_tile_item" />

    <ImageView
        android:id="@+id/noFavoritesUsersImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:importantForAccessibility="no"
        android:visibility="gone"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/no_favorite_users_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noFavoriteUsersTitle"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/favorite_users_title"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/noFavoritesUsersImage"
        app:layout_constraintStart_toStartOf="@+id/noFavoritesUsersImage"
        app:layout_constraintTop_toBottomOf="@+id/noFavoritesUsersImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noFavoriteUsersMessage"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favorite_users_message"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noFavoriteUsersTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>