<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24dp"
        app:navigationIconTint="?attr/colorOnBackground"
        app:titleTextColor="?attr/colorOnBackground"
        tools:title="John Doe" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePict"
        android:layout_width="@dimen/detail_profile_pict_size"
        android:layout_height="@dimen/detail_profile_pict_size"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shapeAppearanceOverlay="@style/ProfilePicture"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_caption_divider"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="@+id/profilePict"
        app:layout_constraintStart_toStartOf="@+id/profilePict"
        app:layout_constraintTop_toBottomOf="@+id/profilePict"
        tools:text="cisnux-seed" />

    <TextView
        android:id="@+id/location"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_caption_divider"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:text="Jakarta, Indonesia" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tab_margin_top"
        android:background="?android:attr/colorBackground"
        android:importantForAccessibility="no"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:tabRippleColor="?android:attr/colorBackground"
        app:tabTextColor="?attr/colorOnBackground" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/tab_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/followerPlaceholder"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/followerPlaceholder"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers_placeholder"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/followingPlaceholder"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following_placeholder"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/followerPlaceholder"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/followers"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        tools:text="1000" />

    <TextView
        android:id="@+id/following"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        tools:text="968" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="followerPlaceholder,followingPlaceholder,followers,following"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="@dimen/profile_caption_divider"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="@+id/profilePict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePict"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavoriteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_to_favorite_users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_favorite_border_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>


